<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintWidth_min="wrap">

        <TextView
            android:id="@+id/resultsUserNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:includeFontPadding="true"
            android:text="@string/name_entry_default"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultsMsgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:text="@string/results_display_msg"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultsScoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="40dp"
            android:text="@string/debug_score_default_results"
            android:textColor="@color/black"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/pointsMsgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/points_string"
            android:textSize="30sp" />

        <Button
            android:id="@+id/retryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:minHeight="60sp"
            android:text="@string/retry_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>